--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "razorpay": "^2.9.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-zoom-pan-pinch": "^3.7.0",
     "tailwind-merge": "^3.5.0",
